/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/**
 * These .proto interfaces are private and unstable.
 * Please see http://wiki.apache.org/hadoop/Compatibility
 * for what changes are allowed for a *unstable* .proto interface.
 */

option java_package = "org.apache.hadoop.ozone.protocol.proto";
option java_outer_classname = "MetadataProtocolProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
package hadoop.hdfs;

import "hdfs.proto";

/**
 * bucketName - the name of the bucket to get
 */
message GetBucketMetadataRequestProto {
  required bytes bucketName = 1;
}

/**
 * bucket - metadata for bucket matching the given name
 */
message GetBucketMetadataResponseProto {
  required BucketProto bucket = 1;
}

/**
 * bucketId - unique numeric ID of bucket
 * name - the name of the bucket
 * owner - the user that owns the bucket
 */
message BucketProto {
  required sfixed64 bucketId = 1;
  required string name = 2;
  required string owner = 3;
}

/**
 * Protocol used by an HDFS node to get or set metadata.  See the request and
 * response messages for details of the RPC calls.
 */
service MetadataProtocolService {
  /**
   * Gets metadata for a bucket.
   */
  rpc getBucketMetadata(GetBucketMetadataRequestProto)
      returns(GetBucketMetadataResponseProto);
}
